--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
   build: ^2.4.0
   collection: ^1.17.2
   dotenv: ^4.1.0
-  secure_dotenv: ^1.0.0
+  secure_dotenv:
+    git:
+        url: https://github.com/albrewot/secure_dotenv.git
   pointycastle: ^3.7.3
   source_gen: ^1.3.2
   source_helper: ^1.3.3
