--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   secure_dotenv:
     git:
         url: https://github.com/albrewot/secure_dotenv.git
+         ref: "v0.0.2"
   pointycastle: ^3.7.3
   source_gen: ^1.3.2
   source_helper: ^1.3.3
